

---v0.6----------------------------------------------------------------------

Reverse compatibility:
- White image and calibration database formats changed, re-run LFUtilProcessWhiteImages and LFUtilProcessCalibrations; note that grid analysis and calibrations don't need to re-run, only the database file needs to be re-generated.

New features:
- Using .json file format for white image and calibration file databases
- Allow LFUtilProcessWhiteImages, LFUtilDecodeLytroFolder to save in specified output folders, leaving input folders untouched
- LFBuild2DLPF, LFBuild4DLPF for frequency-domain lowpass filters, optionally anisotropic
- Smarter search for of white image database when calling LFUtilDecodeLytroFolder; More informative error messages when locating white image database / files

---v0.5.1----------------------------------------------------------------------
Minor bug fixes and improvements

- LFWriteMetadata now supports writing of simple class objects
- LFGatherCamInfo uses unit_info.json on Lytro cameras that have it, fixes serial number mismatch for these cameras

---v0.5------------------------------------------------------------------------
Mostly reverse-compatible. White images and calibrations should be re-processed. See LFToolbox.pdf for details.

New Features :
- Linear refocus super-resolution via LFFiltShiftSum parameter UpsampRate, see LFDemoRefocusSuperres
- New display functions LFDispLawnmower, LFDispTiles, LFDispTilesSubfigs, LFDispProj, LFDispProjSubfigs
- LFReadESLF, LFWriteESLF: Read / write ESLF files
- LFDispMousePan verbose mode, InitialViewIdx parameter
- LFConvertToInt
- LFDisp: optional renormalize, weight channel output
- Contents.m: lists functions by category, type "help <LFToolbox folder name>"
- Updated sample pack v0.5, to match new decode; added ESLF example

Interface changes:
- LFDispVidCirc: parameters changed to allow finer control over animation

Bug Fixes :