@@ -28,6 +28,7 @@ CamInfo = LFStruct2Var( LFReadMetadata(DatabaseFname), 'CamInfo' );
 
 %---Find the closest to the desired settings, prioritizing serial, then zoom, then focus---
 ValidSerial = find( ismember({CamInfo.CamSerial}, {DesiredCamInfo.CamSerial}) );
+assert( ~isempty( ValidSerial ), 'Unable to find white images for camera with Serial %s\n', DesiredCamInfo.CamSerial );
 
 % Discard non-matching serials
 CamInfo = CamInfo(ValidSerial);
